# comic-identity-engine

./: .bashrc.local  .dockerignore  .env.example  .envrc  .gitignore  .zshrc.local  2026-03-19-100055-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  APOLOGY.md  AUDIT_REPORT.md  CATALOG_BROWSING_IMPLEMENTATION.md  CLZ_GCD_MATCHING.md  CLZ_IMPORT_COMPLETE.md  CLZ_IMPORT_REDESIGN.md  COMPREHENSIVE_AUDIT.md  CONCURRENCY_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_BUGS_PLAN.md  CROSS_PLATFORM_SEARCH.md  DATABASE_IMPLEMENTATION_SUMMARY.md  Dockerfile  FIX_PLAN.md  FIX_PLAN_PROGRESS.md  HIP_AUTH_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPORT_REMEDIATION_TODO.md  INFRASTRUCTURE_COPY_SUMMARY.md  LOC_TEST_RESULTS.md  MASTIMPLEMENTATION_PLAN.md  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PLAN_REVIEW.md  PLATFORM_FIX_PLAN.md  PLATFORM_SEARCH_GRANULARITY_ANALYSIS.md  PROGRESS.md  README.md  (+33 more)
.github/workflows/: ci.yml
comic-search-lib/: CPG_INTEGRATION_SUMMARY.md  GCD_SCRAPER_SUMMARY.md  README.md  TODO.md  aa_response.html  debug_test.py  demo.py  demo_gcd.py  inspect_html.py  pyproject.toml  test_cpg_scraper.py
comic-search-lib/comic_search_lib/: __init__.py  browser_pool.py  client.py  exceptions.py  http_pool.py  resilience.py
comic-search-lib/comic_search_lib/models/: __init__.py  comic.py
comic-search-lib/comic_search_lib/scrapers/: __init__.py  atomic_avenue.py  ccl.py  cpg.py  gcd.py  hip.py  locg.py
comic-search-lib/comic_search_lib/utils/: __init__.py  cache.py
comic-search-lib/tests/: __init__.py  conftest.py  test_client.py
comic-search-lib/tests/scrapers/: test_atomic_avenue.py  test_ccl.py  test_cpg.py  test_gcd.py  test_hip.py  test_locg.py
comic_identity_engine/: __init__.py  adapters.py  config.py  database.py  errors.py  gcd_adapter.py  models.py  parsing.py
comic_identity_engine/adapters/: __init__.py  aa.py  base.py  ccl.py  clz.py  cpg.py  gcd.py  hip.py  hip_auth.py  locg.py
comic_identity_engine/api/: __init__.py  __main__.py  dependencies.py  main.py  schemas.py
comic_identity_engine/api/routers/: __init__.py  corrections.py  identity.py  import_router.py  inventory.py  jobs.py  ui.py
comic_identity_engine/cli/: main.py
comic_identity_engine/cli/commands/: __init__.py  admin.py  find.py  import_clz.py
comic_identity_engine/core/: __init__.py  async_http.py  http_client.py  interfaces.py
comic_identity_engine/core/cache/: __init__.py  http_cache.py  memory_cache.py  redis_singleton.py
comic_identity_engine/database/: __init__.py  connection.py  models.py  repositories.py
comic_identity_engine/database/migrations/: alembic.ini  env.py  (+1 more)
comic_identity_engine/jobs/: __init__.py  error_handling.py  queue.py  tasks.py  worker.py
comic_identity_engine/matching/: __init__.py  __main__.py  adapter.py  cli.py  normalizers.py  service.py  types.py
comic_identity_engine/services/: __init__.py  canonical_repair.py  catalog_browser.py  correction_analytics.py  gcd_dump_matcher.py  gcd_matcher.py  identity_resolver.py  imports.py  operations.py  platform_searcher.py  platform_searcher_v2.py  series_cache.py  series_page_extractor.py  url_builder.py  url_parser.py
comic_identity_engine/templates/: base.html  corrections.html  inventory.html  issue_detail.html
docs/: HIP_AUTH.md  PHASE6_COMPREHENSIVE_SUMMARY.md  PHASE6_FINAL_SUMMARY.md  PHASE6_QUEUE_CONFIGURATION.md  PHASE6_SUMMARY.md  issue-suffix-quick-reference.md
docs/archive/: APOLOGY.md  CLZ_IMPORT_REDESIGN.md  DATABASE_IMPLEMENTATION_SUMMARY.md  FIX_PLAN_PROGRESS.md  LOC_TEST_RESULTS.md  MASTIMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE6_QUEUE_CONFIGURATION.md  PLAN_REVIEW.md  SCRAPER_FIXES.md  SHELL.md  WORKER_ARCHITECTURE_REFACTORING.md
examples/: COMPARISON.md  README.md  mycomicshop-xmen-minus1.md
examples/atomicavenue/: README.md  SUMMARY.md
examples/clz/: README.md  SUMMARY.md
examples/comiccollectorlive/: README.md  SUMMARY.md
examples/cpg/: README.md  SUMMARY.md
examples/edge-cases/: QUICK-REFERENCE.md  README.md  TEST-CASES.md
examples/gcd/: README.md  SUMMARY.md
examples/hipcomic/: README.md  SUMMARY.md
examples/leagueofcomicgeeks/: README.md  SUMMARY.md
examples/research/: issue-suffix-quick-reference.md  issue-suffix-research.md  research-issue-zero-handling.md
scripts/: docker-build.sh  ensure-local-venv.sh  import-remediation-check.sh  import-remediation-loop.sh  import-remediation-verify.sh  install-git-hooks.sh  lint.sh  migrate_add_row_data.py  test.sh
tests/: __init__.py  conftest.py  test_config.py  test_core_cache.py  test_cross_platform_search.py  test_database.py  test_database_models.py  test_errors.py  test_gcd_adapter.py  test_gcd_clz_import.py  test_gcd_clz_pipeline_integration.py  test_gcd_dump_matcher.py  test_models.py  test_parsing.py
tests/matching/: test_adapter.py  test_cli.py  test_normalizers.py  test_service.py  test_types.py
tests/test_adapters/: test_aa.py  test_ccl.py  test_clz.py  test_cpg.py  test_hip.py  test_hip_auth.py  test_logc.py
tests/test_api/: conftest.py  test_correction_analytics.py  test_dependencies.py  test_identity_router.py  test_import_router.py  test_jobs_router.py  test_main.py  test_schemas.py
tests/test_cli/: test_commands.py  test_import_clz.py  test_main.py
tests/test_integration/: __init__.py  test_async_http_executor.py  test_clz_import.py  test_http_request_task.py
tests/test_jobs/: test_queue.py  test_tasks.py  test_worker.py
tests/test_performance/: __init__.py  test_queue_performance.py
tests/test_services/: test_catalog_browser.py  test_correction_analytics.py  test_identity_resolver.py  test_operations.py  test_platform_searcher.py  test_url_builder.py  test_url_parser.py
(+22 files in other folders)
