[project]
name = "comic-identity-engine"
version = "0.1.0"
description = "Domain-specific entity resolution system for comic books"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Database
    "asyncpg>=0.30",
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    # Caching + Job Queue
    "redis>=5.2",
    "arq>=0.26",
    # HTTP Client
    "httpx>=0.28",
    # HTML Parsing
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    # Browser Automation (for authenticated scraping)
    "playwright>=1.48",
    # Retry Logic
    "tenacity>=9.0",
    # Fuzzy Matching
    "jellyfish>=1.1",
    # API
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.32",
    # CLI
    "click>=8.1",
    "rich>=13.9",
    # Environment
    "python-dotenv>=1.0",
    # Logging
    "structlog>=25.1",
    # Comic Search Library (for cross-platform search)
    "longbox-scrapers @ git+https://github.com/JoshCLWren/longbox-scrapers.git",
    "jinja2>=3.1.6",
    "aiohttp>=3.13.3",
    # Comic domain utilities
    "longbox-commons @ git+https://github.com/JoshCLWren/longbox-commons.git",
    # Comic entity matching and identity resolution
    "longbox-matcher @ git+https://github.com/JoshCLWren/longbox-matcher.git",
    # HTTP client (replaces duplicate http_client.py)
    "scrapekit @ git+https://github.com/JoshCLWren/scrapekit.git",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
extend-exclude = ["comic-search-lib", "test_search.py", "test_browser_pool.py"]




[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["comic_identity_engine"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
fail_under = 68

[project.scripts]
cie-find = "comic_identity_engine.cli.main:cli_find"
cie-api = "comic_identity_engine.api.__main__:run"
cie-import-clz = "comic_identity_engine.cli.commands.import_clz:cli_import_clz"
cie-admin = "comic_identity_engine.cli.commands.admin:cli_admin"
cie-worker = "comic_identity_engine.jobs.worker:main"
cie-match = "comic_identity_engine.matching.cli:main"
