[project]
name = "comic-search-lib"
version = "0.1.0"
description = "Shared comic search library extracted from comic-web-scrapers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # HTTP Client (replacing aiohttp)
    "httpx>=0.28.0",

    # HTML Parsing
    "beautifulsoup4>=4.12.0",
    "selectolax>=0.3.0",

    # Async browser automation (used by non-CCL scrapers)
    "playwright>=1.40.0",

    # Fuzzy matching
    "jellyfish>=1.1.0",

    # Retry logic
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "vcrpy>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
